--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,11 @@
 }
 
 body {
-  background: var(--background);
+  text-rendering: optimizeLegibility;
+  /* background: var(--background); */
+  min-height: 100vh;
+  background: linear-gradient(147.52deg, #f9fafb 8.89%, #d2d6db 100.48%);
+
   color: var(--foreground);
   /* font-family: Arial, Helvetica, sans-serif; */
 }
